<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_consejos"
            android:icon="@drawable/ic_idea"
            android:title="@string/menu_consejos" />
        <item
            android:id="@+id/nav_modo_uso"
            android:icon="@drawable/ic_manual"
            android:title="@string/menu_modo_uso" />
        <item
            android:id="@+id/nav_conectividad"
            android:icon="@drawable/ic_connection"
            android:title="@string/menu_conectividad" />
        <item
            android:id="@+id/nav_configuracion_perfil"
            android:icon="@drawable/ic_configurations"
            android:title="@string/menu_configuraciones" />
    </group>

</menu>
