<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.consejos.ConsejosCahorroFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="82dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/pawprint" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="14dp"
                    android:text="CACHORRO"
                    android:textColor="#606674"
                    android:textStyle="bold"
                    android:textSize="22dp" /></LinearLayout>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:minHeight="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="379dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="14dp"
                        android:text="La alimentación de tu cachorro"
                        android:textStyle="bold"
                        android:textColor="#606674"
                        android:textSize="17dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:letterSpacing="0.025"
                        android:text="@string/p1"
                        android:textColor="#606674"
                        android:textSize="12dp" />

                    <ImageView
                        android:layout_width="248dp"
                        android:layout_height="169dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/fact" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="291dp"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:minHeight="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="296dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="14dp"
                        android:text="¿Alimentos preparados en casa o prefabricados?"
                        android:textColor="#606674"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal"></LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:letterSpacing="0.025"
                        android:text="@string/p2"
                        android:textColor="#606674"
                        android:textSize="12dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="82dp"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/dogchow" />

                        <TextView
                            android:id="@+id/tvbed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:text="Dog Chow"
                            android:textColor="#606674"
                            android:textSize="12dp" />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/proplan" />

                        <TextView
                            android:id="@+id/tvshower"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:text="Pro Plan"
                            android:textColor="#606674"
                            android:textSize="12dp" />

                        <ImageView
                            android:layout_width="85dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/pedigree" />

                        <TextView
                            android:id="@+id/tvsqft"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:text="Pedigree"
                            android:textColor="#606674"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="498dp"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:minHeight="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="14dp"
                        android:text="Horario de comidas recomendado"
                        android:textColor="#606674"
                        android:textStyle="bold"
                        android:textSize="17dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"

                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="425dp"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:letterSpacing="0.025"
                        android:text="@string/p3"
                        android:textColor="#606674"
                        android:textSize="12dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>